# GAIA-Huggingface-Validation

./: README.md  pyproject.toml
AWS_S3/: .env  CreateTablesthruCSV.py  DownloadFromS3.py  LoadToDatabase.py  LoadToS3.py  data.py  gaia_test_dataset.csv  insertDatatoRDS.py  pyproject.toml
Architecture/: Architecture_Diagram.ipynb  hugging_face.avif  streamlit_workflow_architecture
FastAPI/: pyproject.toml
Streamlit_app/: .env  app.py
Streamlit_app/Scripts/: activate  activate.bat
Streamlit_app/Views/: About_page.py  Application_page.py  Info_page.py  Main_page.py  Visualization.py  s3_connection_test.py
